--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -51,7 +51,7 @@
 </nz-layout> -->
 
 
-<div fxLayout="row" fxLayoutGap="20px" fxLayout.xs="column" class="margin-top2">
+<div fxLayout="row" fxLayoutGap="20px" fxLayout.xs="column" style="margin-top: 66px;" [ngClass]="!(isHandset$ | async )? 'margin-top2' : 'ball'">
     <div fxFlex="45" fxLayout="column" fxLayoutGap="30px">
       <mat-card class="example-card" *ngFor="let feed of feeds" style="margin-bottom: 20px" infiniteScroll [infiniteScrollDistance]="5"
         [infiniteScrollThrottle]="50" (scrolled)="onScroll(meta?.next_page)">
