--- a/src/app/posts/answers/answers.component.css
+++ b/src/app/posts/answers/answers.component.css
@@ -1,27 +1,13 @@
-
-.card-user-name {
-    margin-bottom: 0px;
-    line-height: 1;
-    color: black;
-    font-weight: bolder;
-  }
-  
-  .card-user-info {
-    margin-bottom: 15px;
-  }
-  
-  
-  [nz-button] {
-    margin-right: 15px;
-    font-weight: bolder;
-  }
-  
-  .remove-border {
-    border: none;
+  .margin-top2 {
+    padding: 20px;
   }
 
+  .mat-card-title {
+    display: block;
+    margin-bottom: 8px;
+  }
 
-.post-body {
+  .post-body {
     font-size: 25px;
     margin-bottom: 20px;
     word-break: break-word;
@@ -29,29 +15,3 @@
     font-size: 1.13rem;
     color: #23242b;
    }
-  
-   .post-action-bar {
-     margin-top: 25px;
-   }
-  
-   .answer-form-action-button {
-     float: right;
-     margin: 10px 0px !important;
-   }
-  
-   .answer-body-text {
-    font-size: 25px;
-    margin-bottom: 20px;
-    word-break: break-word;
-    line-height: 1.6;
-    font-size: 1.13rem;
-    color: #23242b;
-   }
-  
-   .comment-answer-form {
-     margin-top: 30px;
-   }
-
-   .question-date {
-    float: right;
-  }
