--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -11,7 +11,7 @@
     </div>
 
     <button mat-icon-button><mat-icon  class="mat-icon-default" matBadge="15" matBadgeColor="warn">notifications_none</mat-icon></button>
-    <button mat-flat-button color="primary">Ask a question</button>
+    <button mat-flat-button color="primary" [routerLink]="['/post/create']">Ask a question</button>
     <button mat-icon-button [matMenuTriggerFor]="menu">
         <mat-icon>more_vert</mat-icon>
       </button>
