fix(answer):First added answer not working on question not working

--- a/src/app/posts/create-post/create-post.component.html
+++ b/src/app/posts/create-post/create-post.component.html
@@ -8,7 +8,7 @@
             <mat-card-subtitle>@{{answer.author.slug}}</mat-card-subtitle>
           </mat-card-header>
         </div> -->
-
+        <mat-progress-bar mode="indeterminate" [hidden]="!isSubmited"></mat-progress-bar>
       <mat-card-content>
         <mat-tab-group>
           <mat-tab>
