--- a/src/app/posts/edit-answer-form/edit-answer-form.component.scss
+++ b/src/app/posts/edit-answer-form/edit-answer-form.component.scss
@@ -10,3 +10,12 @@
     display: block;
     margin-bottom: 8px;
 }
+
+.post-body {
+  font-size: 25px;
+  margin-bottom: 20px;
+  word-break: break-word;
+  line-height: 1.6;
+  font-size: 1.13rem;
+  color: #23242b;
+ }
