--- a/src/app/posts/answer-form/answer-form.component.html
+++ b/src/app/posts/answer-form/answer-form.component.html
@@ -8,7 +8,7 @@
           <mat-card-subtitle>@{{currentUser.username}}</mat-card-subtitle>
         </mat-card-header>
       </div>
-
+      <mat-progress-bar mode="indeterminate" [hidden]="!isSubmited"></mat-progress-bar>
       <mat-card-content>
         <mat-tab-group>
           <mat-tab>
@@ -31,7 +31,6 @@
             </ng-template>
             <div class="post-body" [innerHTML]="answerForm.value.body | markdown"></div>
           </mat-tab>
-
         </mat-tab-group>
       </mat-card-content>
     </mat-card>
