--- a/src/app/posts/answers/answers.component.html
+++ b/src/app/posts/answers/answers.component.html
@@ -29,12 +29,14 @@
 
     </div>
   </div>
-
-
   <app-edit-answer-form *ngIf="answer?.editing" [answer]="answer"></app-edit-answer-form>
 </div>
 
+<div fxLayout="row" fxLayoutGap="20px" fxLayout.xs="column" *ngIf="pageMeta?.next_page && loadingAnswer"  [ngClass]="!(isHandset$ | async )? 'margin-top2' : 'ball'">
+    <div fxFlex="50" fxLayout="column" fxLayoutGap="30px">
+    <mat-card class="example-card">
+      <facebook-content-loader></facebook-content-loader>
+    </mat-card>
+  </div>
+</div>
 
-<span *ngIf="pageMeta?.next_page && loadingAnswer" style="text-align: center">
-  <mat-spinner strokeWidth="5"></mat-spinner>
-</span>
